# cppcheck

./: .clang-tidy  .gitignore  .pylintrc  .selfcheck_suppressions  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  SAFETY.md  appveyor.yml  clang-tidy.md  cppcheck.cppcheck  errorid.py  releasenotes.txt  selfcheck.exp  selfcheck.sh  selfcheck_san.sh
addons/: cppcheckdata.py  misra.py  misra_9.py  naming.py  namingng.py  y2038.py
cli/: CMakeLists.txt  cli.vcxproj  cmdlineparser.cpp  cmdlineparser.h  cppcheckexecutor.cpp  cppcheckexecutor.h  cppcheckexecutorseh.cpp  cppcheckexecutorseh.h  cppcheckexecutorsig.cpp  cppcheckexecutorsig.h  executor.cpp  executor.h  filelister.cpp  main.cpp  processexecutor.cpp  processexecutor.h  sehwrapper.cpp  sehwrapper.h  signalhandler.cpp  singleexecutor.cpp  singleexecutor.h  stacktrace.cpp  threadexecutor.cpp  threadexecutor.h
cmake/: add_compile_options_optional.cmake  clang_tidy.cmake  compilerCheck.cmake  compilerDefinitions.cmake  compileroptions.cmake  dynamic_analyzer_options.cmake  findDependencies.cmake  options.cmake  printInfo.cmake
democlient/: democlient.cpp
frontend/: CMakeLists.txt  frontend.cpp  frontend.h  importproject.cpp  importproject.h
gui/: CMakeLists.txt  aboutdialog.cpp  applicationdialog.cpp  applicationlist.cpp  checkstatistics.cpp  checkstatistics.h  checkthread.cpp  checkthread.h  codeeditor.cpp  codeeditor.h  codeeditorstyle.cpp  common.cpp  (+42 more)
gui/test/filelist/: CMakeLists.txt  testfilelist.cpp
gui/test/projectfile/: CMakeLists.txt  testprojectfile.cpp
gui/test/xmlreportv2/: CMakeLists.txt
(+359 files in other folders)
